--- a/public/css/style.css
+++ b/public/css/style.css
@@ -268,7 +268,7 @@ div#main-wrapper #top-pickup {
   background-color: white;
 }
 
-div#main-wrapper #top-pickup #pickup-thumb {
+div#main-wrapper #top-pickup #pickup-main {
   width: 580px;
   height: 256px;
   position: relative;
