--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -427,7 +427,7 @@ div#main-wrapper {
         margin-right: 30px;
         background-color: white;
 
-        #pickup-thumb {
+        #pickup-main {
             width: 580px;
             height: 256px;
             position: relative;
