--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,7 @@
     <div id="main-wrapper">
 
         <div id="top-pickup">
-            <p id="pickup-thumb">
-                <img src="images/pickup.jpg" alt="ピックアップ画像">
-            </p>
+            <img src="images/Nobeller_main.png" alt="ピックアップ画像">
         </div>
 
         <div id="top-news">
