--- a/views/edit_page/edit_series.ejs
+++ b/views/edit_page/edit_series.ejs
@@ -1,6 +1,7 @@
 <%- include('../include/header'); %>
     <body>
     <div class="post-wrapper">
+        <!-- if there is an error show -->
         <% if (errors.length > 0) { %>            
             <ul class="errors">                   
               <% errors.forEach(error => { %>            
