--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -6,13 +6,31 @@
                         <th scope="col"><a href="/">HOME</a></th>
                         <th scope="col">ABOUT</th>
                         <th scope="col">RECRUIT</th>
-                        <th scope="col"><a href="/contact">CONTACT</a></th>
+                        <th scope="col">CONTACT</a></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td></td>
                         <td><a href="https://tatsuhikoa0314.github.io/my-portfolio/">制作者について</a></td>
+                        <td></td>
+                        <td><a href="https://www.linkedin.com/in/%E9%81%94%E5%BD%A6-%E8%8D%92%E5%B7%9D-38bb2a201/">LinkedIn</a></td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><a href="https://www.facebook.com/nobeller.tatsu/">Facebook</a></td>
+                    </tr>
+                </tbody>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><a href="https://twitter.com/TNobeller">Twitter</a></td>
                     </tr>
                 </tbody>
                 <tfoot>      
