--- a/views/login_out/login.ejs
+++ b/views/login_out/login.ejs
@@ -9,8 +9,9 @@
         <input type="text" name="email">
         <p>パスワード</p>
         <input type="password" name="password">
-        <input type="submit" value="ログイン">    
+        <input type="submit" value="ログイン">
       </form>
+      <h4><a href="/signup">新規登録</a></h4>
     </div>
   </body>
   <%- include('../include/footer'); %>
