--- a/views/main/contact.ejs
+++ b/views/main/contact.ejs
@@ -3,6 +3,7 @@
         <div class="contact-wrapper">
             <form>
                 <h1>CONATCT</h1>
+                <p class="red">現在動作させていません。<br>ご用命の際は一番下の'制作者について'記載のSNSよりお願い申し上げます。</p>
                 <fieldset>
                     <legend>基本情報</legend>
                                             
