--- a/views/main/search.ejs
+++ b/views/main/search.ejs
@@ -80,7 +80,7 @@
                         </form>
                     </details> 
                 </div>          
-
+            <!-- show 10 pages -->
             <% var i = 0;%>
             <% var x;%>
             <% var y;%>
@@ -103,7 +103,7 @@
             <div class="pagination-holder clearfix">
                 <div id="light-pagination" class="pagination">i:<%=i%></div>
             </div>
-
+            <!-- pagination -->
             <script>
                 $(function(){
                     $(".pagination").pagination({
