--- a/views/user_page/deleteAccount.ejs
+++ b/views/user_page/deleteAccount.ejs
@@ -3,6 +3,7 @@
 
 <body>
   <div class="delAccount-wrapper">
+      <!-- if there is an error show -->
     <% if (errors > 0) { %>                                        
         <h4 class="red">password is wrong</h4>                       
     <% } %>
@@ -15,7 +16,7 @@
 </body>
 <%- include('../include/footer'); %>
 </html>
-
+<!-- delete modal -->
 <section id="modalArea" class="modalArea">
     <div id="modalBg" class="modalBg"></div>
         <div class="modalWrapper">
