--- a/views/user_page/my_contents.ejs
+++ b/views/user_page/my_contents.ejs
@@ -19,6 +19,7 @@
             <h1>目次</h1>
             <div class="conetents">
                 <ul>
+                    <!-- show all pages -->
                     <% my_contents.forEach((my_content) => { %>
                         <div>
                             <li><a href="/my_page?contents_id=<%= my_content.contents_id %>&series_id=<%= my_content.series_id %>">
