--- a/views/edit_page/edit_page.ejs
+++ b/views/edit_page/edit_page.ejs
@@ -2,6 +2,7 @@
     <%- include('../include/header'); %>
     <body>
         <div class="post-wrapper">
+            <!-- if ther is an error show -->
             <% if (errors.length > 0) { %>            
                 <ul class="errors">                   
                   <% errors.forEach(error => { %>            
