--- a/views/login_out/signup.ejs
+++ b/views/login_out/signup.ejs
@@ -4,7 +4,7 @@
   <body>
     
     <div class="login-wrapper">
-      
+      <!-- if there is an error -->
       <% if (errors.length > 0) { %>            
         <ul class="errors">                   
           <% errors.forEach(error => { %>            
@@ -23,6 +23,7 @@
         <input type="password" name="password">
         <input type="submit" value="登録する">
       </form>
+      <h4><a href="/login">ログイン</a></h4>
     </div>
   </body>
   <%- include('../include/footer'); %>
