--- a/views/user_page/my_page.ejs
+++ b/views/user_page/my_page.ejs
@@ -6,6 +6,7 @@
 
         <div class="page-detail">
             <h1><a href="/contents?series_id=<%= my_page.series_id %>"></a><%= my_page.title %></a>：<a href="/author?author_id=<%= my_page.author_id %>"><%= my_page.author_name %></a></h1>
+                <!-- if isLast is true hide "次へ" -->
                 <% if (locals.isLast){ %>
                     <h3><a href="/my_contents?series_id=<%= my_page.series_id %>">目次へ</a></h3></h3>
                 <% } else { %>
@@ -24,13 +25,14 @@
             <%- my_page.contents%>
         </div>
         <div class="next">
+            <!-- if isLast is true hide "次へ" -->
             <% if (locals.isLast){ %>
                 <h3><a href="/my_contents?series_id=<%= my_page.series_id %>">目次へ</a></h3></h3>
             <% } else { %>
                 <h3><a href="/edit_next?contents_id=<%= my_page.contents_id%>&series_id=<%= my_page.series_id %>">次へ</a>｜<a href="/my_contents?series_id=<%= my_page.series_id %>">目次へ</a></h3>
             <% } %>
         </div>
-
+        <!-- delete modal -->
         <section id="modalArea" class="modalArea">
             <div id="modalBg" class="modalBg"></div>
                 <div class="modalWrapper">
